// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logo /> Should render correctly 1`] = `
<div>
  <div
    class="logostyles__OuterContainer-sc-1fentac-0 gNzSDR"
  >
    <a
      class="logostyles__StyledLink-sc-1fentac-1 bTAtdl"
      href="/"
    >
      <span
        aria-label="Home page"
        class="logostyles__LargeText-sc-1fentac-2 iQpcfC"
      >
        LOGO
      </span>
    </a>
  </div>
</div>
`;

exports[`<Logo /> Should render correctly animated 1`] = `
<div>
  <div
    class="logostyles__OuterContainer-sc-1fentac-0 gNzSDR"
  >
    <a
      class="logostyles__StyledLink-sc-1fentac-1 bTAtdl"
      href="/"
    >
      <span
        aria-label="Home page"
        class="logostyles__LargeText-sc-1fentac-2 iQpcfC"
      >
        LOGO
      </span>
    </a>
  </div>
</div>
`;

exports[`<Logo /> Should render correctly pride 1`] = `
<div>
  <div
    class="logostyles__OuterContainer-sc-1fentac-0 gNzSDR"
  >
    <a
      class="logostyles__StyledLink-sc-1fentac-1 bTAtdl"
      href="/"
    >
      <span
        aria-label="Home page"
        class="logostyles__LargeText-sc-1fentac-2 fmODRb"
      >
        LOGO
      </span>
    </a>
  </div>
</div>
`;

exports[`<Logo /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="logostyles__OuterContainer-sc-1fentac-0 gNzSDR test-custom-classname"
  >
    <a
      class="logostyles__StyledLink-sc-1fentac-1 bTAtdl"
      href="/"
    >
      <span
        aria-label="Home page"
        class="logostyles__LargeText-sc-1fentac-2 iQpcfC"
      >
        LOGO
      </span>
    </a>
  </div>
</div>
`;
